[gd_scene load_steps=6 format=2]

[ext_resource path="res://Clone/Objects/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/spaceship.PNG" type="Texture" id=2]
[ext_resource path="res://Assets/Laser_Shoot6.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Explosion2.wav" type="AudioStream" id=4]




[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9995, 15.0054 )

[node name="PlayerKineticBody" type="KinematicBody2D"]
position = Vector2( 486.498, 262.686 )
script = ExtResource( 1 )

[node name="Player" type="ColorRect" parent="."]
visible = false
margin_left = -15.0
margin_top = -15.0
margin_right = 15.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Nose" type="ColorRect" parent="."]
visible = false
margin_left = 10.0
margin_top = -5.0
margin_right = 20.0
margin_bottom = 5.0
color = Color( 0.337255, 0.768627, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 25.5, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.00993276, -0.0105862 )
rotation = 1.5708
scale = Vector2( 0.19996, 0.249868 )
texture = ExtResource( 2 )

[node name="Gun" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="Gun"]
position = Vector2( 15.1361, -8.04106 )

[node name="Right" type="Node2D" parent="Gun"]
position = Vector2( 15.2412, 7.98853 )

[node name="TimerSpawnBack" type="Timer" parent="."]
wait_time = 5.0

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -1.0

[node name="JetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 6.058

[node name="TimerImmune" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="TimerSpawnBack" to="." method="_on_TimerSpawnBack_timeout"]
[connection signal="timeout" from="TimerImmune" to="." method="_on_TimerImmune_timeout"]
